# window-tracker

./: .gitignore  .gitmodules  README.md  colmap_txt_exporter.cpp  convert_normal_locations.py  depth.py  flip_images.py  get_frames.sh  get_inertial.sh  get_lines_in_bbox.py  get_nav_image.sh  get_navigation.sh  get_windows.py  gps_to_utm.py  install.sh  line_tracker.py  lines_features.py  point_features.py  read_normals_from_input.py  run_camera.sh  run_demo_colmap.sh  run_demo_mono_slam.sh  run_nav.sh  update_colmap.py  visualise_colmap_database.py  visualise_map_with_normals.py  window_tracker.py
ORB_SLAM3/: CMakeLists.txt  CameraTrajectory.txt  KeyFrameTrajectory.txt  README.md  build.sh
ORB_SLAM3/Examples/: REAMDME.md
ORB_SLAM3/Examples/Monocular/: dji.yaml  mono_euroc.cc  mono_geo_vulcan.cc  mono_kitti.cc  mono_vulcan.cc  photoshoot.yaml  vulcan.yaml  weaver.yaml
ORB_SLAM3/Examples/Monocular-Inertial/: mono_inertial_euroc  mono_inertial_euroc.cc  mono_inertial_kitti.cc  mono_inertial_vulcan.cc  vulcan.yaml
ORB_SLAM3/Examples/Stereo/: stereo_kitti.cc
ORB_SLAM3/Examples/Stereo-Inertial/: stereo_inertial_kitti  stereo_inertial_kitti.cc
ORB_SLAM3/configs/: KITTI04-12.yaml  calib.txt  config_freiburg.json  config_kitti.json  orientation.yaml  ports.yaml  vulcan.yaml
ORB_SLAM3/include/: Atlas.h  Converter.h  KeyFrame.h  LocalMapping.h  Map.h  MapObject.h  MapPoint.h  ObjectDetection.h  ObjectDrawer.h  ObjectPoseGraph.h  ObjectRenderer.h  Optimizer.h  Renderer.hpp  System.h  Tracking.h  tcp_interface.hpp
ORB_SLAM3/reconstruct/: __init__.py  detector2d.py  detector3d.py  kitti_sequence.py  loss.py  loss_utils.py  mono_sequence.py  optimizer.py  utils.py
ORB_SLAM3/src/: Atlas_util.cc  Converter.cc  KeyFrame_util.cc  LocalMapping.cc  LocalMapping_util.cc  LoopClosing.cc  LoopClosing_util.cc  MapObject.cc  MapPoint_util.cc  Map_util.cc  ObjectDetection.cc  ObjectDrawer.cc  ObjectRenderer.cc  Optimizer_util.cc  System.cc  System_util.cc  Tracking.cc  Tracking_util.cc
colmap_updates/src/mvs/: model.cc
docker/: Dockerfile  README
docker/base/: Dockerfile
docker/deprecated/: README  build  issues
docker/extended/: Dockerfile
docker/full/: Dockerfile
examples/docker/advanced/: Dockerfile
examples/docker/simple/: Dockerfile
how_to/: HowTo_csv_to_normals  HowTo_images_to_normals  colmap_How_To  how_to_comma_snark  how_to_docker  how_to_ros2_docker_container  limap_How_To  submodule
jetson_installs_backup/: build_agx_5.1.2.sh  how_to_jetson  install_agx.sh
limap/: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  touch_submodules.sh
limap/cfgs/triangulation/: default.yaml
limap/limap/: __init__.py
limap/limap/util/: io.py
limap/limap/visualize/trackvis/: open3d.py
limap_updates/: visualize_3d_lines_and_window_normals.py
limap_updates/limap/visualize/: vis_lines.py
limap_updates/limap/visualize/trackvis/: __init__.py
lmatch/: __init__.py  lmatch.py  lmatch_demo.m  lmatch_demo.py  lmatch_generate.m  vgg.py
lmatch/examples/: README
lmatch/private/: cros.mexa64  obj_line3d_from_lP.cxx  obj_line3d_from_lP.mexa64  vgg_conv_lineseg.mexa64  vgg_ncc_2im_H.mexa64  vgg_xcv_segment.m
